K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme2.com
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubetms-clusterip-srv
                port: 
                  number: 80
    - host: acme3.com
      http: 
        paths: 
          - path: /api/c
            pathType: Prefix
            backend:
              service:
                name: kubecarrier-clusterip-srv
                port: 
                  number: 80
